# project-gengo

./: .copilotignore  .dockerignore  .gitattributes  .gitignore  .markdownlintignore  CLEANUP_SCRIPT_VERIFICATION.md  CMakeLists.txt  Fixed-CodeQL-JavaScript-v2.ps1  LICENSE  Load-ADOEnvironment.ps1  README.md  Run-AllTests.ps1  SECURITY.md  SOLUTION_SETUP_VERIFICATION.md  Set-DotnetSlnForCalculator.ps1  Start-VSCodeWithADO.ps1  TESTING.md  TEST_REPORT.md  calculator.slnx  codeql-results.sarif  dy  install-azd.ps1  package-lock.json  package.json  prd-11-voice-live-agent-web.md  prompts-template.txt  run-all-tests.sh
.azure/: plan.copilotmd  progress.copilotmd  summary.copilotmd
.azure-pipelines/: 01-azp-level-pipeline.md  01-azp-level-pipeline.yml  01-azp-level-workflow.md  01-level-pipeline.yml  pipeline-ado.yml
.azure-pipelines/src/: getDirectoryContents.py
.azure/default/: connections.xml
.github/: copilot-instructions.md  github-instructions.md
.github/agents/: -- Created by GitHub Copilot in VSCode M.sql  README.md  ado-boards.agent.md  architect.agent.md  azure-verified-modules-terraform.agent.md  gpt-5-mini-beast.agent.md  markdown-lint-editor.agent.md  ms-sql-dba.agent.md  my-agent.agent.md  readme-creator.agent.md  readme-creator.md  testing-specialist.agent.md
.github/chatmodes/: beast-mode-3.1.chatmode.md  beast-mode-4.1.chatmode.md
.github/instructions/: accessibility-auditor.instructions.md  calculator-xunit-testing.instruction.md  code-reviewer.instructions.md  concept-explainer.instructions.md  debugging-tutor.instructions.md  dotnet-best-practices.instructions.md  github-actions-helper.instructions.md  issue-manager.instructions.md  memory.instruction.md  prestons-instruction.instructions.md  pull-request-assistant.instructions.md  testing-automation-python.instructions.md  voice-live-agent-web.instructions.md
.github/prompts/: 1.12-implement-full-calculator-solution.prompt.md  1.12.1-solution-setup.prompt.md  1.12.2-calculator-implementation.prompt.md  1.12.3-refactor-steps.prompt.md  (+13 more)
IntellisenseRepro/: Program.cs
cicd/: prd-01-level-pipeline.md  prd-01-level-workspace.md  prompts.txt
cli/: prompts.txt
content-exclusion/: brown-fox-german.txt  brown-fox-japanese.txt  generateFibSequence.py
content-inclusion/: brown-fox-hindi.txt
databases/: prompts.txt
docs/: agents.md  angular-development.md  ghcp-enabled-personas.extracted.txt  ghcp-enabled-personas.md  personas-analysis.md  prd-azure-pipeline.md  prd-calculator-from-reverse-prompting.md  prd-covert-from-c-to-csharp.md  prd-csharp-basic-calculator-solution.md  prd-template.md  quickstart.md  research-findings.md  security-assessment-report.md
genai/: 11-voice-live-agent-web.md  prd-11-voice-live-agent-web.md
ghas/: prd-codeql-analysis-for-python.md
github-gui/: prompts.txt
gitops/: 01-level-workflow.md  03-gaw-level-pipeline.md  code-ql-cpp.md  codeql-queries.md  dependabot-pr-review-analysis.md  get-gh-dependabot-alerts.md  github-enterprise-report-workflow.md  new-codeql-analysis-for-python.md  prd-workflows-and-pipelines.md  prompts.txt
programming/cpp/workspace/thermostat/: .clang-format  .gitignore  CMakeLists.txt  README.md
programming/cpp/workspace/thermostat/examples/: main.cpp
programming/cpp/workspace/thermostat/include/thermostat/: thermostat.hpp
programming/cpp/workspace/thermostat/src/: practice.cpp  thermostat.cpp
programming/cpp/workspace/thermostat/tests/: CMakeLists.txt  test_thermostat.cpp
prompt-engineering/: prompt-engineering.txt
secrets-exclusion/: Test-SecretsExclusion.ps1
secrets-inclusion/: Test-SecretsInclusion.ps1
todo_api/: requirements.txt
(+753 files in other folders)
